RequisitionService update